Fix logo scaling in header on mobile.

--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ section {
 
 /* Blog archive */
 .archive {
-  padding: 60px 20px;
+  padding: 30px 20px;
   text-align: left;
 }
 
@@ -205,7 +205,12 @@ section {
 
 .post {
   text-align: left;
-  padding: 20px 300px;
+  padding: 30px 20px;
+}
+
+.post-content {
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 .post h1 {
@@ -313,6 +318,10 @@ hr {
     display: flex;
   }
 
+  .logo img {
+    height: 35px;
+  }
+    
   .hamburger {
     display: flex;
   }
